# QGIS

./: bug.md
doc/uml/: QgsProcessingAlgorithm.html  QgsProcessingAlgorithm.org
emacs/direction/: test.org
emacs/postgis/: test.html  test.org
ms-windows/osgeo4w/: QGIS-Installer.nsi  creatensis.pl  gdal-dev-env.bat  msvc-env.bat  package-nightly.cmd  quickpackage-online.bat
resources/: srs.db  srs6.db
src/analysis/processing/: qgsalgorithmwritevectortiles.cpp
src/app/: main.cpp  qgisapp.cpp
src/core/: qgis.cpp  qgsapplication.cpp  qgscommandlineutils.cpp  qgserror.cpp
src/core/vectortile/: qgsvectortilewriter.cpp  qgsvectortilewriter.h
src/crashhandler/: main.cpp  moc_qgscrashdialog.cpp_parameters
src/plugins/: CMakeLists.txt
src/plugins/txtinput/: CMakeLists.txt  coordnate.h  ellipsoid.cpp  ellipsoid.h  gauss.cpp  gauss.h  geopackage.cpp  geopackage.h  odata.cpp  odata.h  odataattributes.cpp  odataattributes.h  odatadefine.cpp  odatadefine.h  odatafeature.cpp  odatafeature.h  odatageometry.cpp  odatageometry.h  odatalayer.cpp  odatalayer.h  projection.cpp  projection.h  txtexporttopostgis.cpp  txtexporttopostgis.h  txtinput.cpp  txtinput.h  txtinput.qrc  txtinputDock.cpp  txtinputDock.h  txtinputDock.ui  txtreader.cpp  txtreader.h  txtwriter.cpp  txtwriter.h
src/process/: main.cpp
src/python/: qgis_python.h
src/server/: qgsserver.cpp
tests/bench/: main.cpp
